Upgrade Groovy to 3.0.9 upgrade Java to 17.